# playing_fast_api

./: .gitignore  README.md  pyproject.toml
playing_fast_api/: defs.py  logger_setup.py  server.py
playing_fast_api/seeds/: db_seed.py
